fixed stretched form in pomodoro page

--- a/src/components/Pomodoro/ManualLog.module.scss
+++ b/src/components/Pomodoro/ManualLog.module.scss
@@ -2,6 +2,7 @@
 
 .manual {
   grid-column: 2 / 3;
+  height: fit-content;
 
   @include respond(tab-port-large) {
     grid-column: 1 / 2;
